--- a/ejemplos/ejemplo2/proyectoUno/templates/index.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/index.html
@@ -5,49 +5,59 @@
 {% endblock %}
 
 {% block content %}
-<h3>Número de estudiantes {{ numero_estudiantes }}</h3>
+<div id="main-wrapper">
+    <div class="container">
+        <div class="row gtr-200">
+            <div class="col-12">
 
-<table id="tabla_datos">
+                <!-- Content -->
+                <div id="content">
+                    <section class="box">
+                        <header class="major">
+                            <h2>Número de estudiantes {{ numero_estudiantes }}</h2>
+                        </header>
+                        <div class="table-wrapper">
+                            <table id="tabla_datos" class="alt">
+                                <thead>
+                                    <tr>
+                                        <th>Estudiante</th>
+                                        <th>Cedula</th>
+                                        <th>Correo</th>
+                                        <th>Números Telefónicos</th>
+                                        <th>Opciones</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for e in estudiantes %}
+                                    <tr>
+                                        <td>{{ e.nombre }} {{ e.apellido }}</td>
+                                        <td>{{ e.cedula }}</td>
+                                        <td>{{ e.correo }}</td>
+                                        <td>
+                                            <ul>
+                                                {% for t in e.numeros_telefonicos.all %}
+                                                <li>
+                                                    <span>{{ t.telefono }} - {{ t.tipo }} - [<a href="{% url 'editar_numero_telefonico' t.id %}">editar</a>]</span>
+                                                </li>
+                                                {% endfor %}
+                                            </ul>
+                                            [<a href="{% url 'crear_numero_telefonico_estudiante' e.id %}">+Teléfono</a>]
+                                        </td>
+                                        <td>
+                                            <a href="{% url 'obtener_estudiante' e.id %}">ver</a><br>
+                                            <a href="{% url 'editar_estudiante' e.id %}">editar</a><br>
+                                            <a href="{% url 'eliminar_estudiante' e.id %}" onclick="return confirm('¿Está seguro de la eliminación?')">eliminar</a>
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </section>
+                </div>
 
-  <thead>
-    <tr>
-      <th>Estudiante</th>
-      <th>Cedula</th>
-      <th>Correo</th>
-      <th>Numeros Telefónico </th>
-      <th>Opciones</th>
-    </tr>
-  </thead>
-
-  {% for e in estudiantes %}
-  <tr>
-    <td> {{e.nombre}} {{e.apellido}}</td>
-    <td> {{e.cedula}}</td>
-    <td> {{e.correo}}</td>
-    <td>
-      <ul>
-        {% for t in e.numeros_telefonicos.all %}
-          <li>
-            <span>{{t.telefono}} - {{t.tipo}} - [<a href="{% url 'editar_numero_telefonico' t.id %}">editar</a>] </span>
-          </li>
-        {% endfor %}
-      </ul>
-        [<a href="{% url 'crear_numero_telefonico_estudiante' e.id%}">+Teléfono</a>]
-    </td>
-    <td> <a href="{% url 'obtener_estudiante' e.id %}">ver</a> <br>
-      <a href="{% url 'editar_estudiante' e.id %}">editar</a> <br>
-      <a href="{% url 'eliminar_estudiante' e.id %}"
-      onclick="return confirm('¿Está seguro de la eliminación?')" >
-      eliminar</a>
-    </td>
-
-  </tr>
-  {% endfor %}
-</table>
-
-<script type="text/javascript">
-  $(document).ready( function () {
-    $('#tabla_datos').DataTable();
-  });
-</script>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
