--- a/ejemplos/ejemplo2/proyectoUno/templates/master.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/master.html
@@ -1,69 +1,68 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     {% load static %}
-    <link rel="stylesheet" href="{% static 'assets/css/main.css'}" />
+    <link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" href="{% static 'assets/js/jquery.min.js'}"></script>
-    <script type="text/javascript" href="{% static 'assets/js/jquery.dropotron.min.js'}"></script>
-    <script type="text/javascript" href="{% static 'assets/js/browser.min.js'}"></script>
-    <script type="text/javascript" href="{% static 'assets/js/breakpoints.min.js'}"></script>
-    <script type="text/javascript" href="{% static 'assets/js/util.js'}"></script>
-    <script type="text/javascript" href="{% static 'assets/js/main.js'}"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+    <script src="{% static 'assets/js/jquery.min.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.dropotron.min.js' %}"></script>
+    <script src="{% static 'assets/js/browser.min.js' %}"></script>
+    <script src="{% static 'assets/js/breakpoints.min.js' %}"></script>
+    <script src="{% static 'assets/js/util.js' %}"></script>
+    <script src="{% static 'assets/js/main.js' %}"></script>
     <title>
       {% block title %}
       {% endblock %}
     </title>
-  </head>
-  <body>
+</head>
+<body>
     <!-- paso 5-->
     {% load socialaccount %}
     {% load account %}
-  <header>
-    <title>App de Gestión</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="{% static 'assets/css/main.css'}" />
+    <header>
+        <title>App de Gestión</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
 
-    <div class="">
-        {% if messages %}
-          <div class="messages">
-            {% for message in messages %}
-            <span{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</span>
-            {% endfor %}
-          </div>
-        {% endif %}
-    </div>
-    <nav class="top_menu">
-      <ul>
-
-        {% if user.is_authenticated %}
-          <li> <span class="nombre_usuario"> Bienvenido: {{user.username}} </span></li>
-        {% endif %}
-        <li><a href="{% url 'index' %}">inicio</a></li>
-        <li><a href="{% url 'crear_estudiante' %}">agregar estudiante</a></li>
-        <li><a href="{% url 'crear_numero_telefonico' %}">agregar telefono</a></li>
-        {% if user.is_authenticated %}
-          <li><a href="{% url 'logout_view' %}">salir</a></li>
-        {% else %}
-          <li>[<a href="{% url 'login' %}">ingresar</a>]</li>
-          <li>[<a href="{% provider_login_url 'github' %}">ingresar con GitHub</a>]</li>
-        {% endif %}
-      </ul>
-    </nav>
-  </header>
-  <section>
-      {% block content %}
-      {% endblock %}
-  </section>
+        <div class="">
+            {% if messages %}
+              <div class="messages">
+                {% for message in messages %}
+                <span{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</span>
+                {% endfor %}
+              </div>
+            {% endif %}
+        </div>
+        <nav class="top_menu">
+            <ul>
+                {% if user.is_authenticated %}
+                  <li><span class="nombre_usuario"> Bienvenido: {{ user.username }} </span></li>
+                {% endif %}
+                <li><a href="{% url 'index' %}">inicio</a></li>
+                <li><a href="{% url 'crear_estudiante' %}">agregar estudiante</a></li>
+                <li><a href="{% url 'crear_numero_telefonico' %}">agregar telefono</a></li>
+                {% if user.is_authenticated %}
+                  <li><a href="{% url 'logout_view' %}">salir</a></li>
+                {% else %}
+                  <li>[<a href="{% url 'login' %}">ingresar</a>]</li>
+                  <li>[<a href="{% provider_login_url 'github' %}">ingresar con GitHub</a>]</li>
+                {% endif %}
+            </ul>
+        </nav>
+    </header>
+    <section>
+        {% block content %}
+        {% endblock %}
+    </section>
 
     <footer>
-      <p>Loja-Ecuador</p>
-      <p>{% now "j F Y H:i" %}</p>
+        <p>Loja-Ecuador</p>
+        <p>{% now "j F Y H:i" %}</p>
     </footer>
-  </body>
+</body>
 </html>
