Estilos con plantillas html5

--- a/ejemplos/ejemplo2/proyectoUno/administrativo/static/assets/css/main.css
+++ b/ejemplos/ejemplo2/proyectoUno/administrativo/static/assets/css/main.css
@@ -97,7 +97,7 @@ input, select, textarea {
 		background-size: 100% 30em, auto;
 		font-family: 'Open Sans', sans-serif;
 		font-size: 13pt;
-		color: #696969;
+		color: #0f0f0f;
 		font-weight: 300;
 		line-height: 2.25em;
 	}
@@ -116,7 +116,7 @@ input, select, textarea {
 	input, select, textarea {
 		font-family: 'Open Sans', sans-serif;
 		font-size: 13pt;
-		color: #696969;
+		color: #1b1a1a;
 		font-weight: 300;
 		line-height: 2.25em;
 	}
@@ -1938,8 +1938,8 @@ input, select, textarea {
 	}
 
 		#logo h1 {
-			background: #ff4486;
-			color: #fff;
+			background: #0090c5;
+			color: #eee8e8;
 			border-radius: 6px;
 			font-family: 'Oleo Script', serif;
 			font-weight: 400;
