--- a/ejemplos/ejemplo2/proyectoUno/templates/master.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/master.html
@@ -1,68 +1,150 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
-    <script src="{% static 'assets/js/jquery.min.js' %}"></script>
-    <script src="{% static 'assets/js/jquery.dropotron.min.js' %}"></script>
-    <script src="{% static 'assets/js/browser.min.js' %}"></script>
-    <script src="{% static 'assets/js/breakpoints.min.js' %}"></script>
-    <script src="{% static 'assets/js/util.js' %}"></script>
-    <script src="{% static 'assets/js/main.js' %}"></script>
-    <title>
-      {% block title %}
-      {% endblock %}
-    </title>
-</head>
-<body>
-    <!-- paso 5-->
-    {% load socialaccount %}
-    {% load account %}
-    <header>
-        <title>App de Gestión</title>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-        <link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
 
-        <div class="">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width" />
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/main.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/estilos2.css' %}">
+  <!-- <link rel="stylesheet" type="text/css" href="{% static 'a/css/estilos.css' %}">-->
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css">
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+  <title>
+    {% block title %}
+    {% endblock %}
+  </title>
+</head>
+
+<body class="is-preload homepage">
+  <!-- paso 5-->
+  {% load socialaccount %}
+  {% load account %}
+  <div id="header-wrapper">
+    <header id="header" class="container">
+      <div id="logo">
+        <h1><a href="{% url 'index' %}">UTPL</a></h1>
+        <span>App Administrativa</span>
+        <!-- Nav -->
+        <nav id="nav">
+          <div class="">
             {% if messages %}
-              <div class="messages">
-                {% for message in messages %}
-                <span{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</span>
+            <div class="messages">
+              {% for message in messages %}
+              <span{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</span>
                 {% endfor %}
-              </div>
+            </div>
             {% endif %}
-        </div>
-        <nav class="top_menu">
-            <ul>
-                {% if user.is_authenticated %}
-                  <li><span class="nombre_usuario"> Bienvenido: {{ user.username }} </span></li>
-                {% endif %}
-                <li><a href="{% url 'index' %}">inicio</a></li>
-                <li><a href="{% url 'crear_estudiante' %}">agregar estudiante</a></li>
-                <li><a href="{% url 'crear_numero_telefonico' %}">agregar telefono</a></li>
-                {% if user.is_authenticated %}
-                  <li><a href="{% url 'logout_view' %}">salir</a></li>
-                {% else %}
-                  <li>[<a href="{% url 'login' %}">ingresar</a>]</li>
-                  <li>[<a href="{% provider_login_url 'github' %}">ingresar con GitHub</a>]</li>
-                {% endif %}
-            </ul>
+          </div>
+          <ul>
+            {% if user.is_authenticated %}
+            <li class="current"> <span class="nombre_usuario"> Bienvenido: {{user.username}} </span></li>
+            {% endif %}
+            <li><a href="{% url 'index' %}">inicio</a></li>
+            <li><a href="{% url 'crear_estudiante' %}">agregar estudiante</a></li>
+            <li><a href="{% url 'crear_numero_telefonico' %}">agregar telefono</a></li>
+            {% if user.is_authenticated %}
+            <li><a href="{% url 'logout_view' %}">salir</a></li>
+            {% else %}
+            <li><a href="{% url 'login' %}">ingresar</a></li>
+            <li><a href="{% provider_login_url 'github' %}">ingresar con GitHub</a></li>
+            {% endif %}
+          </ul>
         </nav>
     </header>
     <section>
-        {% block content %}
-        {% endblock %}
-    </section>
+      <br>
+      {% block content %}
 
-    <footer>
-        <p>Loja-Ecuador</p>
-        <p>{% now "j F Y H:i" %}</p>
-    </footer>
+      {% endblock %}
+    </section>
+    <div id="footer-wrapper">
+      <footer id="footer" class="container">
+        <div class="row">
+          <div class="col-3 col-6-medium col-12-small">
+
+            <!-- Links -->
+            <section class="widget links">
+              <h3>Random Stuff</h3>
+              <ul class="style2">
+                <li><a href="#">Etiam feugiat condimentum</a></li>
+                <li><a href="#">Aliquam imperdiet suscipit odio</a></li>
+                <li><a href="#">Sed porttitor cras in erat nec</a></li>
+                <li><a href="#">Felis varius pellentesque potenti</a></li>
+                <li><a href="#">Nullam scelerisque blandit leo</a></li>
+              </ul>
+            </section>
+
+          </div>
+          <div class="col-3 col-6-medium col-12-small">
+
+            <!-- Links -->
+            <section class="widget links">
+              <h3>Random Stuff</h3>
+              <ul class="style2">
+                <li><a href="#">Etiam feugiat condimentum</a></li>
+                <li><a href="#">Aliquam imperdiet suscipit odio</a></li>
+                <li><a href="#">Sed porttitor cras in erat nec</a></li>
+                <li><a href="#">Felis varius pellentesque potenti</a></li>
+                <li><a href="#">Nullam scelerisque blandit leo</a></li>
+              </ul>
+            </section>
+
+          </div>
+          <div class="col-3 col-6-medium col-12-small">
+
+            <!-- Links -->
+            <section class="widget links">
+              <h3>Random Stuff</h3>
+              <ul class="style2">
+                <li><a href="#">Etiam feugiat condimentum</a></li>
+                <li><a href="#">Aliquam imperdiet suscipit odio</a></li>
+                <li><a href="#">Sed porttitor cras in erat nec</a></li>
+                <li><a href="#">Felis varius pellentesque potenti</a></li>
+                <li><a href="#">Nullam scelerisque blandit leo</a></li>
+              </ul>
+            </section>
+
+          </div>
+          <div class="col-3 col-6-medium col-12-small">
+
+            <!-- Contact -->
+            <section class="widget contact last">
+              <h3>Contact Us</h3>
+              <ul>
+                <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+                <li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+              </ul>
+              <p>Loja-Ecuador</p>
+              <p>{% now "j F Y H:i" %}</p>
+            </section>
+
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <div id="copyright">
+              <ul class="menu">
+                <li>&copy; Derechos reservados</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </div>
+  <!-- Scripts -->
+  <!--<script src="{% static 'assets/js/jquery.min.js' %}"></script>-->
+  <script src="{% static 'assets/js/jquery.dropotron.min.js' %}"></script>
+  <script src="{% static 'assets/js/browser.min.js' %}"></script>
+  <script src="{% static 'assets/js/breakpoints.min.js' %}"></script>
+  <script src="{% static 'assets/js/util.js' %}"></script>
+  <script src="{% static 'assets/js/main.js' %}"></script>
 </body>
+
 </html>
