--- a/ejemplos/ejemplo2/proyectoUno/templates/registration/logout.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/registration/logout.html
@@ -3,7 +3,7 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-  <div>
+  <div class="form-container">
         <h2> Logged out succefully </h2>
         <br>
         <a href="{% url 'login' %}">Iniciar sesión</a>
