--- a/ejemplos/ejemplo2/proyectoUno/templates/account/base.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/account/base.html
@@ -1,45 +1,61 @@
 {% load i18n %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <title>{% block head_title %}{% endblock %}</title>
-    {% block extra_head %}
-    {% endblock %}
-  </head>
-  <body>
-    {% block body %}
 
-    {% if messages %}
-    <div>
+<head>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <title>{% block head_title %}{% endblock %}</title>
+  {% block extra_head %}
+  {% endblock %}
+</head>
+
+<body>
+  {% block body %}
+
+  {% if messages %}
+  <div class="container mt-3">
+    <div class="alert alert-info">
       <strong>{% trans "Messages:" %}</strong>
-      <ul>
+      <ul class="list-unstyled">
         {% for message in messages %}
-        <li>{{message}}</li>
+        <li>{{ message }}</li>
         {% endfor %}
       </ul>
     </div>
-    {% endif %}
+  </div>
+  {% endif %}
 
-    <div>
-      <strong>{% trans "Menu:" %}</strong>
-      <ul>
-        {% if user.is_authenticated %}
-        <li><a href="{% url 'account_email' %}">{% trans "Change E-mail" %}</a></li>
-        <li><a href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a></li>
-        {% else %}
-        <li><a href="{% url 'account_login' %}">{% trans "Sign In" %}</a></li>
-        <li><a href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a></li>
-        {% endif %}
-      </ul>
+  <div class="container mt-3">
+    <div class="row">
+      <div class="col">
+        <h5 class="mb-3">{% trans "Menu:" %}</h5>
+        <ul class="list-unstyled">
+          {% if user.is_authenticated %}
+          <li><a href="{% url 'account_email' %}" class="btn btn-primary">{% trans "Change E-mail" %}</a></li>
+          <li><a href="{% url 'account_logout' %}" class="btn btn-secondary">{% trans "Sign Out" %}</a></li>
+          {% else %}
+          <li><a href="{% url 'account_login' %}" class="btn btn-primary">{% trans "Sign In" %}</a></li>
+          <li><a href="{% url 'account_signup' %}" class="btn btn-primary">{% trans "Sign Up" %}</a></li>
+          {% endif %}
+        </ul>
+      </div>
     </div>
-    {% block content %}
-    {% endblock %}
-    {% endblock %}
-    {% block extra_body %}
-    {% endblock %}
-  </body>
-</html>
+  </div>
 
+  {% block content %}
+  {% endblock %}
+
+  {% endblock %}
+
+  {% block extra_body %}
+  {% endblock %}
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kFV5c5Ct6p5l+hUGPjL4I5w4YFVaoLUjAwq+qVk5p4D3eWp1FZHpQUwP2qtm+tJd"
+    crossorigin="anonymous"></script>
+</body>
+
+</html>
