--- a/ejemplos/ejemplo2/proyectoUno/templates/account/login.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/account/login.html
@@ -40,6 +40,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   {% csrf_token %}
   {{ form.as_p }}
   {% if redirect_field_value %}
+  <h2>Holaaaa</h2>
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
   <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
