--- a/ejemplos/ejemplo2/proyectoUno/templates/crearEstudiante.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/crearEstudiante.html
@@ -1,12 +1,13 @@
 {% extends "master.html" %}
 
 {% block content %}
-<h2>Crear Estudiante</h3>
+<div class="form-container">
+    <h2>Crear Estudiante</h2>
 
-<form action="" method="post">
-  {% csrf_token %}
-  {{formulario.as_p}}
-  <p><input type='submit' value='Agregar'/></p>
-</form>
-
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ formulario.as_p }}
+        <p><input type="submit" value="Agregar"></p>
+    </form>
+</div>
 {% endblock %}
