--- a/ejemplos/ejemplo2/proyectoUno/templates/crearNumeroTelefonico.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/crearNumeroTelefonico.html
@@ -1,15 +1,15 @@
 {% extends "master.html" %}
 
 {% block content %}
+<div class="form-container">
+  <h2>Crear Número Telefónico</h3>
+    <form action="" method="post">
 
-<h2>Crear Número Telefónico</h3>
+      {% csrf_token %}
 
-<form action="" method="post">
+      {{formulario.as_p}}
 
-  {% csrf_token %}
-
-  {{formulario.as_p}}
-
-  <p><input type='submit' value='Agregar'/></p>
-</form>
+      <p><input type='submit' value='Agregar' /></p>
+    </form>
+</div>
 {% endblock %}
