--- a/ejemplos/ejemplo2/proyectoUno/templates/crearNumeroTelefonicoEstudiante.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/crearNumeroTelefonicoEstudiante.html
@@ -1,12 +1,14 @@
 {% extends "master.html" %}
 
 {% block content %}
-<h2>Crear Número Telefónico para {{estudiante}}</h3>
+<div class="form-container">
+  <h2>Crear Número Telefónico para {{estudiante}}</h3>
 
-<form action="" method="post">
-  {% csrf_token %}
-  {{formulario.as_p}}
-  <p><input type='submit' value='Agregar'/></p>
-</form>
+    <form action="" method="post">
+      {% csrf_token %}
+      {{formulario.as_p}}
+      <p><input type='submit' value='Agregar'/></p>
+    </form>    
+</div>
 
 {% endblock %}
