--- a/ejemplos/ejemplo2/proyectoUno/templates/editarEstudiante.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/editarEstudiante.html
@@ -1,12 +1,15 @@
 {% extends "master.html" %}
 
 {% block content %}
-<h2>Editar Estudiante</h3>
+<div class="form-container">
+  <h2>Editar Estudiante</h3>
 
-<form action="" method="post">
-  {% csrf_token %}
-  {{formulario.as_p}}
-  <p><input type='submit' value='Actualizar'/></p>
-</form>
+    <form action="" method="post">
+      {% csrf_token %}
+      {{formulario.as_p}}
+      <p><input type='submit' value='Actualizar' /></p>
+    </form>
+</div>
+
 
 {% endblock %}
