--- a/ejemplos/ejemplo2/proyectoUno/templates/index.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/index.html
@@ -5,59 +5,53 @@
 {% endblock %}
 
 {% block content %}
-<div id="main-wrapper">
-    <div class="container">
-        <div class="row gtr-200">
-            <div class="col-12">
+<div class="container">
+  <h3>Número de estudiantes {{ numero_estudiantes }}</h3>
 
-                <!-- Content -->
-                <div id="content">
-                    <section class="box">
-                        <header class="major">
-                            <h2>Número de estudiantes {{ numero_estudiantes }}</h2>
-                        </header>
-                        <div class="table-wrapper">
-                            <table id="tabla_datos" class="alt">
-                                <thead>
-                                    <tr>
-                                        <th>Estudiante</th>
-                                        <th>Cedula</th>
-                                        <th>Correo</th>
-                                        <th>Números Telefónicos</th>
-                                        <th>Opciones</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for e in estudiantes %}
-                                    <tr>
-                                        <td>{{ e.nombre }} {{ e.apellido }}</td>
-                                        <td>{{ e.cedula }}</td>
-                                        <td>{{ e.correo }}</td>
-                                        <td>
-                                            <ul>
-                                                {% for t in e.numeros_telefonicos.all %}
-                                                <li>
-                                                    <span>{{ t.telefono }} - {{ t.tipo }} - [<a href="{% url 'editar_numero_telefonico' t.id %}">editar</a>]</span>
-                                                </li>
-                                                {% endfor %}
-                                            </ul>
-                                            [<a href="{% url 'crear_numero_telefonico_estudiante' e.id %}">+Teléfono</a>]
-                                        </td>
-                                        <td>
-                                            <a href="{% url 'obtener_estudiante' e.id %}">ver</a><br>
-                                            <a href="{% url 'editar_estudiante' e.id %}">editar</a><br>
-                                            <a href="{% url 'eliminar_estudiante' e.id %}" onclick="return confirm('¿Está seguro de la eliminación?')">eliminar</a>
-                                        </td>
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-                    </section>
-                </div>
-
-            </div>
-        </div>
-    </div>
+  <table id="tabla_datos" class="display" style="width:100%">
+    <thead>
+      <tr>
+        <th>Estudiante</th>
+        <th>Cedula</th>
+        <th>Correo</th>
+        <th>Números Telefónicos</th>
+        <th>Opciones</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for e in estudiantes %}
+      <tr>
+        <td>{{ e.nombre }} {{ e.apellido }}</td>
+        <td>{{ e.cedula }}</td>
+        <td>{{ e.correo }}</td>
+        <td>
+          <ul>
+            {% for t in e.numeros_telefonicos.all %}
+            <li>
+              {{ t.telefono }} - {{ t.tipo }} - [<a href="{% url 'editar_numero_telefonico' t.id %}"><i class="fas fa-edit"> Editar</i></a>]
+            </li>
+            {% endfor %}
+          </ul>
+          [<a href="{% url 'crear_numero_telefonico_estudiante' e.id %}"><i class="fas fa-plus-circle"> Telefono</i></a>]
+        </td>
+        <td>
+          <a href="{% url 'obtener_estudiante' e.id %}" title="Ver"><i class="fas fa-eye"> Ver</i></a>
+          <a href="{% url 'editar_estudiante' e.id %}" title="Editar"><i class="fas fa-edit"> Editar</i></a>
+          <a href="{% url 'eliminar_estudiante' e.id %}"
+            onclick="return confirm('¿Está seguro de la eliminación?')" title="Eliminar"><i class="fas fa-trash-alt"> Eliminar</i></a>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 </div>
+
+{% endblock %}
+
+{% block scripts %}
+<script>
+  $(document).ready(function () {
+    $('#tabla_datos').DataTable();
+  });
+</script>
 {% endblock %}
