--- a/ejemplos/ejemplo2/proyectoUno/templates/listadoEstudiantesDos.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/listadoEstudiantesDos.html
@@ -1,15 +1,18 @@
-<h2>Listado de Estudiantes</h3>
-<h3>Número de estudiantes {{ numero_estudiantes }}</h3>
-
-{% for e in estudiantes %}
+<div class="form-container">
+  <h2>Listado de Estudiantes</h3>
+    <h3>Número de estudiantes {{ numero_estudiantes }}</h3>
     
-  {{e}}<br/>
-  <ul>
-  {% for numero in e.numerotelefonico_set.all%}
-      <li>
-          Número telefónico {{numero}}<br/>
-      </li>
-  {% endfor %}
-  </ul>
-  <br/>
-{% endfor %}
+    {% for e in estudiantes %}
+        
+      {{e}}<br/>
+      <ul>
+      {% for numero in e.numerotelefonico_set.all%}
+          <li>
+              Número telefónico {{numero}}<br/>
+          </li>
+      {% endfor %}
+      </ul>
+      <br/>
+    {% endfor %}
+</div>
+
