--- a/ejemplos/ejemplo2/proyectoUno/templates/obtener_estudiante.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/obtener_estudiante.html
@@ -1,13 +1,15 @@
 {% extends "master.html" %}
 
 {% block content %}
+<div class="form-container">
+    <h3>Datos de estudiante</h3>
 
-<h3>Datos de estudiante</h3>
+    <p><b>Nombre:</b>{{estudiante.nombre}}</p>
+    <p><b>Apellido:</b>{{estudiante.apellido}}</p>
+    <p><b>Cédula:</b>{{estudiante.cedula}}</p>
+    <p><b>Correo:</b>{{estudiante.correo}}</p>
 
-<p><b>Nombre:</b>{{estudiante.nombre}}</p>
-<p><b>Apellido:</b>{{estudiante.apellido}}</p>
-<p><b>Cédula:</b>{{estudiante.cedula}}</p>
-<p><b>Correo:</b>{{estudiante.correo}}</p>
+    <br />
+</div>
 
-<br/>
 {% endblock %}
