--- a/ejemplos/ejemplo2/proyectoUno/templates/registration/login.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/registration/login.html
@@ -3,10 +3,12 @@
 {% block title %}Login - aquí{% endblock %}
 
 {% block content %}
+<div class="form-container">
   <h2>Login</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Ingresar</button>
+    <button type="submit">Ingresar demo</button>
   </form>
+</div>
 {% endblock %}
