--- a/ejemplos/ejemplo2/proyectoUno/templates/registration/login.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/registration/login.html
@@ -8,7 +8,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Ingresar demo</button>
+    <button type="submit">Ingresar</button>
   </form>
 </div>
 {% endblock %}
