--- a/ejemplos/ejemplo2/proyectoUno/templates/account/password_change.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/account/password_change.html
@@ -5,12 +5,14 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
+<div class="form-container-uno">
     <h1>{% trans "Change Password" %}</h1>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
+        <button class="primaryAction" type="submit" name="action" value="{% trans 'Reset My Password ' %}"></button>
         <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
     </form>
+</div>
 {% endblock %}
