--- a/ejemplos/ejemplo2/proyectoUno/templates/account/password_reset.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/account/password_reset.html
@@ -6,7 +6,7 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-
+<div class="form-container-uno">
     <h1>{% trans "Password Reset" %}</h1>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
@@ -17,8 +17,10 @@
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+        <button class="primaryAction" type="submit" name="action">{% trans 'Reset My Password' %}</button>
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    
+</div>
 {% endblock %}
