Estilos y tabla en index

--- a/ejemplos/ejemplo2/proyectoUno/templates/crearNumeroTelefonicoEstudiante.html
+++ b/ejemplos/ejemplo2/proyectoUno/templates/crearNumeroTelefonicoEstudiante.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="form-container">
-  <h2>Crear Número Telefónico para {{estudiante}}</h3>
+  <h2>Crear Número Telefónico para {{estudiante.nombre}}</h3>
 
     <form action="" method="post">
       {% csrf_token %}
